[gd_scene load_steps=6 format=3 uid="uid://om525hroc3mr"]

[ext_resource type="PackedScene" uid="uid://byoolwbycr4tk" path="res://player/models/player_model.glb" id="1_xdlwj"]
[ext_resource type="Script" uid="uid://b7g0hemb3mmh5" path="res://player/scripts/player_skeleton_controller.gd" id="2_r0a5i"]
[ext_resource type="PackedScene" uid="uid://cj7p8kb5is0qr" path="res://weapons/models/longsword_model.tscn" id="3_1buoc"]
[ext_resource type="PackedScene" uid="uid://411nf870j1o3" path="res://player/animations/humanoid_animation_tree.tscn" id="3_cjpug"]
[ext_resource type="Material" uid="uid://qyrv64vmclq2" path="res://player/models/player_model_mat_m.tres" id="5_xm6ps"]

[node name="player_model" node_paths=PackedStringArray("skeleton", "weapon") instance=ExtResource("1_xdlwj")]
script = ExtResource("2_r0a5i")
skeleton = NodePath("Armature_001/Skeleton3D")
weapon = NodePath("Armature_001/Skeleton3D/WeaponAttach/WeaponRT/WeaponHolder/longsword")

[node name="AnimationTree" parent="." index="0" instance=ExtResource("3_cjpug")]
root_node = NodePath("..")
anim_player = NodePath("../AnimationPlayer")
parameters/walk_blendspace/blend_position = Vector2(-0.00983226, -0.024299)

[node name="player_model" parent="AnimationTree" index="0"]
visible = false

[node name="Skeleton3D" parent="AnimationTree/player_model/Armature_001" index="0"]
bones/0/position = Vector3(1.75165e-33, 0.884602, -0.0355277)
bones/0/rotation = Quaternion(-2.98023e-08, 1.19209e-07, -2.11758e-22, 1)
bones/1/rotation = Quaternion(-0.000652307, 0.0250204, 0.999527, -0.0178762)
bones/2/rotation = Quaternion(-0.114058, 0.00051451, -0.0111282, 0.993412)
bones/4/rotation = Quaternion(-0.000562797, 0.00332753, 0.0180392, 0.999832)
bones/5/position = Vector3(-0.134036, -0.00773418, -6.54844e-08)
bones/5/rotation = Quaternion(0.00646964, 0.0249159, 0.999506, 0.0180216)
bones/6/rotation = Quaternion(-0.113988, 0.00497039, 0.0118259, 0.993399)
bones/8/rotation = Quaternion(-4.24416e-05, -0.00694903, -0.018048, 0.999813)
bones/51/scale = Vector3(1, 1, 1)
bones/58/rotation = Quaternion(0.00479742, -0.70709, 0.707091, -0.00479742)
bones/62/scale = Vector3(1, 1, 1)

[node name="Longsword" parent="AnimationTree/player_model/Armature_001/Skeleton3D" index="0"]
transform = Transform3D(-0.162269, 0.393174, -0.905032, -0.443957, -0.848202, -0.288886, -0.881233, 0.354918, 0.312189, 0.0665526, 2.18747, 0.547325)

[node name="Cube" parent="AnimationTree/player_model/Armature_001/Skeleton3D" index="1"]
transform = Transform3D(-0.162269, 0.393174, -0.905032, -0.443957, -0.848202, -0.288886, -0.881233, 0.354918, 0.312189, -0.0867795, 2.51825, 0.408912)

[node name="Cube_001" parent="AnimationTree/player_model/Armature_001/Skeleton3D" index="2"]
transform = Transform3D(-0.162269, 0.393174, -0.905032, -0.443957, -0.848202, -0.288886, -0.881233, 0.354918, 0.312189, 0.0312526, 2.26362, 0.51546)

[node name="Cylinder_001" parent="AnimationTree/player_model/Armature_001/Skeleton3D" index="3"]
transform = Transform3D(-0.162269, 0.393174, -0.905032, -0.443957, -0.848202, -0.288886, -0.881233, 0.354918, 0.312189, 0.114058, 2.08498, 0.590208)

[node name="Skeleton3D" parent="Armature_001" index="0"]
modifier_callback_mode_process = 0
bones/0/position = Vector3(2.64698e-22, 0.884599, -0.0355277)
bones/0/rotation = Quaternion(-2.98023e-08, 1.19209e-07, -2.54408e-29, 1)
bones/1/rotation = Quaternion(0.00236373, 0.0330178, 0.99927, -0.0190574)
bones/2/rotation = Quaternion(-0.127739, 0.000513638, -0.012463, 0.991729)
bones/3/rotation = Quaternion(0.763781, -0.0520651, 0.0529698, 0.641187)
bones/4/rotation = Quaternion(0.00375472, 0.00250972, 0.0177862, 0.999832)
bones/5/position = Vector3(-0.134036, -0.00773418, -6.68808e-08)
bones/5/rotation = Quaternion(-0.00257719, 0.0255631, 0.999491, 0.0189305)
bones/6/rotation = Quaternion(-0.113315, 0.00497078, 0.0117561, 0.993477)
bones/7/rotation = Quaternion(0.764147, 0.0625522, -0.0407118, 0.64071)
bones/8/rotation = Quaternion(-4.24321e-05, -0.00694902, -0.018048, 0.999813)
bones/9/rotation = Quaternion(0.707107, -3.09086e-08, 1.37679e-07, 0.707107)
bones/11/rotation = Quaternion(0.00288137, 3.59366e-15, 6.86971e-10, 0.999996)
bones/12/rotation = Quaternion(-0.00288137, -1.77226e-14, -6.86971e-10, 0.999996)
bones/13/rotation = Quaternion(0.0066188, -1.19207e-07, 7.89012e-10, 0.999978)
bones/14/rotation = Quaternion(-0.00310769, -0.000596304, -0.831314, 0.555794)
bones/15/rotation = Quaternion(0.227885, -0.0447089, -0.619605, 0.749773)
bones/16/rotation = Quaternion(0.536882, -0.00356809, -0.409868, 0.737396)
bones/17/rotation = Quaternion(0.100353, 0.428778, 0.517881, 0.733402)
bones/18/rotation = Quaternion(0.401598, -0.0210936, -0.288497, 0.868933)
bones/19/rotation = Quaternion(-0.15803, -0.0083817, -0.024376, 0.987098)
bones/20/position = Vector3(0.00269278, 0.0976004, 0.0355213)
bones/20/rotation = Quaternion(-0.051715, 0.0591904, -0.276731, 0.957727)
bones/21/rotation = Quaternion(-0.0170233, -0.0118632, -0.571483, 0.820351)
bones/22/rotation = Quaternion(0.0235423, 0.0155574, -0.54257, 0.839536)
bones/23/position = Vector3(0.0117453, 0.103073, 0.00663473)
bones/23/rotation = Quaternion(0.0556915, 0.0275164, -0.530165, 0.845616)
bones/24/rotation = Quaternion(-0.0145595, -0.0162394, -0.730792, 0.682251)
bones/25/rotation = Quaternion(-0.00118009, -0.00130108, -0.740667, 0.67187)
bones/26/position = Vector3(0.00881499, 0.101805, -0.0159811)
bones/26/rotation = Quaternion(-0.0341792, -0.0219976, -0.573537, 0.818171)
bones/27/rotation = Quaternion(0.0058023, 0.00697786, -0.739671, 0.672907)
bones/28/rotation = Quaternion(0.0306149, 0.0384238, -0.695152, 0.717182)
bones/29/position = Vector3(0.0079592, 0.0811148, -0.0403388)
bones/29/rotation = Quaternion(-0.00465023, -0.0762163, -0.325104, 0.942591)
bones/30/rotation = Quaternion(-0.00208329, -0.00394899, -0.758146, 0.652069)
bones/31/rotation = Quaternion(0.00568066, 0.009975, -0.706536, 0.707584)
bones/32/rotation = Quaternion(0.00669007, -0.00595437, 0.831293, 0.555762)
bones/33/rotation = Quaternion(0.17373, 0.191845, 0.435, 0.862432)
bones/34/rotation = Quaternion(0.662792, 0.0191791, 0.497325, 0.559471)
bones/35/rotation = Quaternion(-0.101587, -0.120124, -0.299766, 0.940952)
bones/36/rotation = Quaternion(0.547824, -0.459674, 0.185082, 0.674042)
bones/37/rotation = Quaternion(-0.0513861, 0.0217989, -0.0298301, 0.997995)
bones/38/rotation = Quaternion(0.0945015, -0.0637419, 0.612635, 0.782103)
bones/39/rotation = Quaternion(-0.0172347, 0.0113866, 0.551262, 0.834077)
bones/40/rotation = Quaternion(0.0240744, -0.0156118, 0.535359, 0.844137)
bones/41/rotation = Quaternion(0.0524388, -0.0347793, 0.610583, 0.789449)
bones/42/rotation = Quaternion(-0.0181599, 0.0126527, 0.533018, 0.845814)
bones/43/rotation = Quaternion(-0.00150706, 0.000902111, 0.513616, 0.858019)
bones/44/rotation = Quaternion(-0.0292981, 0.0259365, 0.679017, 0.733079)
bones/45/rotation = Quaternion(0.00640926, -0.00664657, 0.543514, 0.839349)
bones/46/rotation = Quaternion(0.0394447, -0.0272703, 0.456117, 0.888627)
bones/47/rotation = Quaternion(-0.0820463, 0.0780851, 0.725637, 0.678692)
bones/48/rotation = Quaternion(-0.0026592, 0.00304384, 0.566881, 0.82379)
bones/49/rotation = Quaternion(0.00746816, -0.00756586, 0.470386, 0.882397)
bones/51/position = Vector3(-0.125313, 0.352302, 0.159502)
bones/51/rotation = Quaternion(0.0688897, 0.983111, -0.151679, -0.0757672)
bones/58/position = Vector3(0.153413, 0.0416657, -0.103619)
bones/58/rotation = Quaternion(0.00479742, -0.707091, 0.707091, -0.00479742)
bones/59/position = Vector3(-0.153415, 0.0371392, -0.102107)
bones/59/rotation = Quaternion(0.00458585, 0.707092, -0.707092, -0.00458585)
bones/60/rotation = Quaternion(-0.0126777, 0.706993, 0.706993, -0.0126777)
bones/61/position = Vector3(-0.146956, 0.512624, 0.774651)
bones/62/position = Vector3(-0.0769777, 1.43643, 0.311787)
bones/64/position = Vector3(-0.320898, 1.28422, -0.446731)

[node name="Longsword" parent="Armature_001/Skeleton3D" index="0"]
transform = Transform3D(-0.164561, 0.389332, -0.906278, -0.450392, -0.847086, -0.282121, -0.877535, 0.361754, 0.314749, 0.0679783, 2.18976, 0.543683)
visible = false

[node name="TorsoIK" type="LookAtModifier3D" parent="Armature_001/Skeleton3D" index="1"]
transform = Transform3D(1, -7.62281e-10, 2.38418e-07, 3.81134e-10, 0.999999, 0.00159865, -2.38419e-07, -0.00159865, 0.999999, -1.49411e-15, 1.09488, -0.0355278)
target_node = NodePath("TorsoTarget")
bone_name = "TorsoRotator"
bone = 9
forward_axis = 2
primary_rotation_axis = 0

[node name="TorsoTarget" type="Marker3D" parent="Armature_001/Skeleton3D/TorsoIK" index="0"]
transform = Transform3D(1, 2.77556e-17, 0, 2.77556e-17, 1, 1.16415e-10, 0, -1.16415e-10, 1, -3.61351e-07, -0.00242293, 1.51561)

[node name="FPHeadStretch_RT" type="RemoteTransform3D" parent="Armature_001/Skeleton3D/TorsoIK" index="1"]
transform = Transform3D(1, 1.37392e-09, 8.28493e-12, -1.37395e-09, 0.999983, 0.00576271, -4.68958e-13, -0.00576271, 0.999983, 3.53318e-08, 0.62505, -0.146194)
remote_path = NodePath("../../FPHeadOverride")

[node name="WeaponRotator" type="Node3D" parent="Armature_001/Skeleton3D/TorsoIK" index="2"]
transform = Transform3D(0.999985, 0.0053968, 0.000748251, -0.00540192, 0.99996, 0.00701469, -0.000710366, -0.00701863, 0.999975, -1.60167e-10, 0.589979, 0.00161442)

[node name="WeaponRotatorTarget" type="Marker3D" parent="Armature_001/Skeleton3D/TorsoIK/WeaponRotator" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.5, 0)

[node name="NeckRotator" type="Node3D" parent="Armature_001/Skeleton3D/TorsoIK" index="3"]
transform = Transform3D(1, 1.25116e-17, 4.74338e-20, -8.01214e-18, 1, 1.16415e-10, -3.81165e-20, 0, 1, -1.60159e-10, 0.592355, -0.0329697)

[node name="NeckTarget" type="Marker3D" parent="Armature_001/Skeleton3D/TorsoIK/NeckRotator" index="0"]
transform = Transform3D(1, 0, 0, 4.43734e-30, 1, 0, 0, 0, 1, 0, 0, 1.45247)

[node name="HeadRotator" type="Node3D" parent="Armature_001/Skeleton3D/TorsoIK/NeckRotator" index="1"]
transform = Transform3D(1, 3.8114e-10, -7.10543e-14, -3.81139e-10, 0.999998, 0.00167525, 6.11067e-13, -0.00167524, 0.999999, 4.12586e-11, 0.105876, 0.0344033)

[node name="CameraRT" type="RemoteTransform3D" parent="Armature_001/Skeleton3D/TorsoIK/NeckRotator/HeadRotator" index="0"]
transform = Transform3D(-1, 0, -8.74227e-08, 0, 0.999999, 0, 8.74228e-08, 0, -0.999999, -0.0297484, 0.071686, 0.187486)
update_rotation = false
update_scale = false

[node name="HeadTarget" type="Marker3D" parent="Armature_001/Skeleton3D/TorsoIK/NeckRotator/HeadRotator" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, -6.93889e-18, 0, 1, 5.55112e-17, 0.0274643, 1.45247)

[node name="TorsoCollisionRT" type="RemoteTransform3D" parent="Armature_001/Skeleton3D/TorsoIK" index="4"]
transform = Transform3D(1, 3.81133e-10, -2.38419e-07, -7.62282e-10, 0.999999, -0.00159865, 2.38418e-07, 0.00159865, 0.999999, -8.32571e-09, 0.379813, 0.036135)

[node name="WeaponRotatorIK" type="LookAtModifier3D" parent="Armature_001/Skeleton3D" index="2"]
transform = Transform3D(1, 1.38053e-18, 3.43545e-20, 0, 0.998762, 0.0497388, 2.77556e-17, -0.0497388, 0.998762, -2.24992e-10, 1.68486, -0.0348566)
target_node = NodePath("../TorsoIK/WeaponRotator/WeaponRotatorTarget")
bone_name = "WeaponHolderRotator"
bone = 50
primary_rotation_axis = 0

[node name="NeckIK" type="LookAtModifier3D" parent="Armature_001/Skeleton3D" index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.72407, 0.0846984)
target_node = NodePath("../TorsoIK/NeckRotator/NeckTarget")
bone_name = "Neck"
bone = 12
primary_rotation_axis = 0

[node name="HeadIK" type="LookAtModifier3D" parent="Armature_001/Skeleton3D" index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75154, 0)
target_node = NodePath("../TorsoIK/NeckRotator/HeadRotator/HeadTarget")
bone_name = "Head"
bone = 13
primary_rotation_axis = 0

[node name="CameraAttach" type="BoneAttachment3D" parent="Armature_001/Skeleton3D" index="5"]
transform = Transform3D(1, -5.29141e-09, 2.38358e-07, -5.91652e-13, 0.999753, 0.0221965, -2.38417e-07, -0.0221965, 0.999753, -8.45955e-11, 1.79311, -0.0342694)
bone_name = "Head"
bone_idx = 13

[node name="WeaponAttach" type="BoneAttachment3D" parent="Armature_001/Skeleton3D" index="6"]
transform = Transform3D(-0.979704, 0.114132, -0.164784, -0.121522, 0.315597, 0.941079, 0.159413, 0.942004, -0.295322, -0.126172, 1.52885, 0.319645)
bone_name = "HandIK.R"
bone_idx = 51

[node name="WeaponRT" type="RemoteTransform3D" parent="Armature_001/Skeleton3D/WeaponAttach" index="0"]
transform = Transform3D(0.689169, 0.0815617, -0.719995, -0.723882, 0.0332636, -0.689121, -0.0322563, 0.996113, 0.0819653, -0.00158573, 0.0329829, 0.0161717)

[node name="FirstPersonOffset" type="Node3D" parent="Armature_001/Skeleton3D/WeaponAttach/WeaponRT" index="0"]
transform = Transform3D(0.999967, 0.00805518, 0.00126484, -0.00806044, 0.999959, 0.00419037, -0.00123098, -0.00420044, 0.999991, -0.0575444, 0.135319, -0.105339)

[node name="WeaponHolder" type="Node3D" parent="Armature_001/Skeleton3D/WeaponAttach/WeaponRT" index="1"]
transform = Transform3D(0.736381, -0.0448623, -0.675079, 1.11759e-08, 0.997799, -0.0663088, 0.676568, 0.0488285, 0.73476, -0.0362854, 0.0537172, 0.00370161)

[node name="HandIKTarget_R" type="Marker3D" parent="Armature_001/Skeleton3D/WeaponAttach/WeaponRT/WeaponHolder" index="0"]
transform = Transform3D(-0.120821, -0.979858, 0.159009, -0.0290865, 0.163607, 0.986097, -0.992248, 0.114516, -0.0482681, 0.0558604, 0.0267626, -0.0244543)

[node name="HandIKTarget_L" type="Marker3D" parent="Armature_001/Skeleton3D/WeaponAttach/WeaponRT/WeaponHolder" index="1"]
transform = Transform3D(-0.212946, -0.92649, 0.31028, -0.0152441, 0.320676, 0.947067, -0.976945, 0.196944, -0.0824103, 0.079287, -0.16266, 0.0173375)

[node name="longsword" parent="Armature_001/Skeleton3D/WeaponAttach/WeaponRT/WeaponHolder" index="2" instance=ExtResource("3_1buoc")]

[node name="FPHeadOverride" type="BoneAttachment3D" parent="Armature_001/Skeleton3D" index="7"]
transform = Transform3D(1, -7.81352e-10, 2.38416e-07, -5.93879e-13, 0.999994, 0.00327986, -2.38417e-07, -0.00327985, 0.999994, -1.30588e-14, 1.68486, -0.0339144)
bone_name = "Neck"
bone_idx = 12

[node name="Cube" parent="Armature_001/Skeleton3D" index="8"]
transform = Transform3D(-0.164561, 0.389332, -0.906278, -0.450392, -0.847086, -0.282121, -0.877535, 0.361754, 0.314749, -0.0838553, 2.52011, 0.402604)
visible = false

[node name="Cube" parent="Armature_001/Skeleton3D/Cube" index="0"]
visible = false

[node name="Cube_001" parent="Armature_001/Skeleton3D" index="9"]
transform = Transform3D(-0.164561, 0.389332, -0.906278, -0.450392, -0.847086, -0.282121, -0.877535, 0.361754, 0.314749, 0.0330233, 2.26581, 0.511204)
visible = false

[node name="Cylinder_001" parent="Armature_001/Skeleton3D" index="10"]
transform = Transform3D(-0.164561, 0.389332, -0.906278, -0.450392, -0.847086, -0.282121, -0.877535, 0.361754, 0.314749, 0.115019, 2.08741, 0.587392)
visible = false

[node name="Cylinder_001" parent="Armature_001/Skeleton3D/Cylinder_001" index="0"]
visible = false

[node name="Cube_004" parent="Armature_001/Skeleton3D" index="11"]
layers = 2
surface_material_override/0 = ExtResource("5_xm6ps")

[node name="HandIK_R" type="SkeletonIK3D" parent="Armature_001/Skeleton3D" index="12"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.152794, 1.17006, 0.397446)
root_bone = &"ArmUpper.R"
tip_bone = &"Hand.R"
target_node = NodePath("../WeaponAttach/WeaponRT/WeaponHolder/HandIKTarget_R")
min_distance = 0.001
max_iterations = 20

[node name="HandIK_L" type="SkeletonIK3D" parent="Armature_001/Skeleton3D" index="13"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.152794, 1.17006, 0.397446)
root_bone = &"ArmUpper.L"
tip_bone = &"Hand.L"
target_node = NodePath("../WeaponAttach/WeaponRT/WeaponHolder/HandIKTarget_L")
min_distance = 0.001
max_iterations = 20

[editable path="AnimationTree"]
[editable path="AnimationTree/player_model"]
